--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pydantic-settings==2.3.4
 psycopg2-binary==2.9.9
 faker==25.8.0
 httpx==0.27.0
-
 pytest==8.2.2
 pytest-cov==5.0.0
+python-multipart
+poetry
