--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,6 @@
+# pytest.ini (atualize o existente)
 [pytest]
 pythonpath = .
 testpaths = tests
+markers =
+    heavy: testes pesados que geram grande volume de dados (opt-in)
